@@ -5,6 +5,8 @@ Revision history for Perl extension Alien::Prototype::Window.
       came bundled with PWC.
     - fix dependency on Archive::Zip; its a -build- dependency, not a
       -configuration- dependency
+    - added "passthrough" Makefile.PL; we -NEED- to have Module::Build
+      installed, auto-generated compatibility Makefile.PLs are insufficient
 
 1.3.1   Sun Sep 30 13:28 PDT 2007
     - added POD docs to Alien::Prototype::Window
